# courtroom

./: .dockerignore  .env.compose.example  .gitignore  AGENTS.md  Makefile  README.md  case-file-generation-plan.md  docker-compose.yml  pyrightconfig.json
app/agent-service/: .env.example  AGENTS.md  README.md  langgraph.json  pyproject.toml
app/agent-service/docs/: service-contract.md
app/agent-service/src/: types.py
app/agent-service/src/agent_service/: __init__.py
app/agent-service/src/subgraphs/witness/: nodes.py
apps/agent-service/: .env.example  AGENTS.md  Makefile  README.md  langgraph.json  pyproject.toml
apps/agent-service/docs/: service-contract.md
apps/agent-service/evals/: domain_evaluation_dataset.json
apps/agent-service/evals/promptfoo/: promptfooconfig.json
apps/agent-service/src/: __init__.py  agent.py  service.py  witness_agent.py
apps/agent-service/src/case_editor/: __init__.py  graph.py  nodes.py  prompts.py  service.py  state.py
apps/agent-service/src/evaluation/: __init__.py  baseline.py  costs.py  dataset.py  evaluators.py  monitoring.py  promptfoo_suite.py  reports.py  rubric.py  traceability.py
apps/agent-service/src/subgraphs/witness/: graph.py  helpers.py  nodes.py  prompts.py  state.py
apps/agent-service/src/utils/: config.py  env.py  graph.py  helpers.py  llm.py  nodes.py  prompts.py  state.py  types.py  validation.py
apps/agent-service/tests/: test_case_editor_nodes.py  test_evaluation_baseline.py  test_evaluation_dataset.py  test_evaluation_monitoring.py  test_evaluation_monitoring_validation.py  test_evaluation_rubric.py  test_evaluation_rule_reference.py  test_main_graph_helpers.py  test_promptfoo_suite.py  test_validation.py
apps/api-service/: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
apps/api-service/src/api_service/: __init__.py  config.py  dummy_case_file.py  main.py  repository.py  simulation_queue.py  simulation_repository.py  worker.py
apps/api-service/src/api_service/api/: deps.py
apps/api-service/src/api_service/api/routers/: case_files.py  simulations.py
apps/api-service/src/api_service/core/: config.py
apps/api-service/src/api_service/db/: base.py  session.py
apps/api-service/src/api_service/jobs/: __init__.py  simulations.py
apps/api-service/src/api_service/presenters/: simulations.py
apps/api-service/src/api_service/queue/: __init__.py  simulation_pipeline.py
apps/api-service/src/api_service/repositories/: case_file_messages.py  case_files.py  simulation_runs.py
apps/api-service/src/api_service/schemas/: case_files.py  simulations.py
apps/api-service/src/api_service/services/: case_file_factory.py  simulation_queue.py
apps/api-service/src/api_service/services/storage/: __init__.py  base.py  r2.py
apps/api-service/src/api_service/services/tts/: __init__.py  base.py  kokoro_provider.py  service.py  types.py  (+1 more)
apps/api-service/src/api_service/workflows/: __init__.py  case_editor.py  simulation_pipeline.py
apps/api-service/tests/: __init__.py  conftest.py  run_kokoro_rq_smoke.py  test_audio_service.py  test_case_file_api.py  test_simulation_pipeline.py  test_worker.py
apps/api-service/tests/api/: test_case_files.py  test_simulations.py
apps/api-service/tests/factories/: __init__.py  case_files.py  simulations.py
apps/worker-service/: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml
apps/worker-service/src/worker_service/: __init__.py  completion.py  config.py  jobs.py  main.py  models.py  queues.py  repositories.py  runner.py
apps/worker-service/src/worker_service/core/: __init__.py
apps/worker-service/src/worker_service/db/: __init__.py
apps/worker-service/src/worker_service/jobs/: __init__.py  completion.py  simulation.py
apps/worker-service/src/worker_service/models/: __init__.py  completions.py  jobs.py
apps/worker-service/src/worker_service/orm/: __init__.py  records.py
apps/worker-service/src/worker_service/queues/: __init__.py  simulation_results.py
apps/worker-service/src/worker_service/repositories/: __init__.py  case_files.py  simulation_runs.py
apps/worker-service/src/worker_service/services/: __init__.py  simulation_runner.py
apps/worker-service/tests/: test_worker_service.py
(+118 files in other folders)
