[project]
name = "agent-service"
version = "0.1.0"
description = "LangGraph runtime workspace for the courtroom simulator."
requires-python = ">=3.11"
dependencies = [
  "courtroom-domain",
  "langchain-openai>=1.3.5",
  "langgraph>=1.2.9",
  "langgraph-cli[inmem]>=0.4.0",
  "langsmith>=0.10.2",
  "pydantic>=2.13.4",
  "python-dotenv>=1.2.2",
]

[tool.uv.sources]
courtroom-domain = { path = "../../packages/python-domain", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
