[project]
name = "api-service"
version = "0.1.0"
description = "FastAPI backend API for the courtroom simulator."
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.16.0",
  "agent-service",
  "boto3>=1.39.0",
  "courtroom-domain",
  "fastapi>=0.116.0",
  "httpx2>=0.28.0",
  "kokoro>=0.9.4",
  "numpy>=2.3.0",
  "pydantic>=2.13.4",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.2.2",
  "redis>=5.0.0",
  "rq>=2.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = ["pyright>=1.1.403", "ruff>=0.12.4"]

[tool.uv.sources]
agent-service = { path = "../agent-service", editable = true }
courtroom-domain = { path = "../../packages/python-domain", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/api_service.egg-info"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingModuleSource = true
