[project]
name = "worker-service"
version = "0.1.0"
description = "RQ worker process for asynchronous courtroom simulation jobs."
requires-python = ">=3.11"
dependencies = [
  "agent-service",
  "courtroom-domain",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.13.4",
  "python-dotenv>=1.2.2",
  "redis>=5.0.0",
  "rq>=2.0.0",
]

[tool.uv.sources]
agent-service = { path = "../agent-service", editable = true }
courtroom-domain = { path = "../../packages/python-domain", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
